--- a/mysite/entry/templates/entry/entry_list.html
+++ b/mysite/entry/templates/entry/entry_list.html
@@ -1,55 +1,64 @@
 {% load staticfiles %}
-    {% include "entry/header.html" %}
-    <body>
-        <section class="hero">
-           
-            <div class="definition"> 
-            		{% if query %}
-                        {% for entry in query %}
-                <h1 class="col-2-3">{{entry.bhutia}}</h1>
-                <br>
-                <p>Category: {{entry.category}} </p>
-                <br>
-                <p>English Translation: {{entry.english}}</p>
-                <br>
-                
-    
-                <p>Tibetan Script: {{entry.tibetan}}</p>
-                {% endfor %}
-            		{% endif %}
-                
-                    {% if not entrys and not query%}
-                <h1 class="col-2-3">Term Not Found.</h1>
-                    {% endif %}
+{% include "entry/header.html" %}
+<body>
+    <section class="hero">
 
-                    {% if not error and not query%}
+        <!-- Begin section for found ones -->
+
+        <div class="definition"> 
+          {% if query %}
+          {% for entry in query %}
+          <h1 class="col-2-3">{{entry.bhutia}}</h1>
+          <br>
+          <p>Category: {{entry.category}} </p>
+          <br>
+          <p>English Translation: {{entry.english}}</p>
+          <br>
+
+          <p>Tibetan Script: {{entry.tibetan}}</p>
+          {% endfor %}
+          {% endif %}
+
+          <!-- End section for found ones -->
 
 
-                    {% if entrys %}
-                    <p> Did you mean? </p>
-                    {% endif %}
+        <!--Begin section for term not found -->
+          {% if not entrys and not query%}
+          <h1 class="col-2-3">Term Not Found.</h1>
+          {% endif %}
 
-                    {% for entry in entrys %}
-                <h1 class="col-2-3">{{entry.bhutia}}</h1>
-                <br>
-                <p>Category: {{entry.category}} </p>
-                <br>
-                <p>English Translation: {{entry.english}}</p>
-                <br>
-                
-    
-                <p>Tibetan Script: {{entry.tibetan}}</p>
-                {% endfor %}
-                {% endif %}
+          {% if not error and not query%}
 
-                
-            </div>
-           
-            
-            
-        </section>
+          <!--End Section for term not found -->
 
 
+          {% if entrys %}
+          <p> Did you mean? </p>
+          {% endif %}
 
-    </body>
+          <!--Begin section for related words -->
+
+          {% for entry in entrys %}
+          <h1 class="col-2-3">{{entry.bhutia}}</h1>
+          <br>
+          <p>Category: {{entry.category}} </p>
+          <br>
+          <p>English Translation: {{entry.english}}</p>
+          <br>
+
+
+          <p>Tibetan Script: {{entry.tibetan}}</p>
+          {% endfor %}
+          {% endif %}
+
+        <!--End Section for related words -->
+      </div>
+
+
+
+  </section>
+
+
+
+</body>
 </html>
