--- a/mysite/entry/templates/index.html
+++ b/mysite/entry/templates/index.html
@@ -1,34 +1,39 @@
 {% load staticfiles %}
 <html lang="en">
-    <head>
-        <title>Bhutia Dictionary</title>
-        
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-        <link rel="stylesheet" href="{% static 'css/index.css' %}">
- 	</head>
+<head>
+  <title>Bhutia Dictionary</title>
 
- 	<body>
- 		
- 		 <div class="navigation-container">
-            <div class="navigation">
-                <div id="Logo">
-                     <h1> <a href="/" class="Logo">The Bhutia Dictionary</a> </h1>          
-                </div>
-               
-                <form action="/entry/" method="get"> 
-                    <div class="input-field">
-                        <span class="icon"><i class="fa fa-search"></i></span>
-      <input type="search" id="search" placeholder="Search..." name="q" />
-                    </div>
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
+</head>
+<body>
+  <div class="navigation-container">
+    <div class="navigation">
+      <div id="Logo">
+        <h1> <a href="/" class="Logo">The Bhutia Dictionary</a> </h1>
+      </div>
+      <section id="search-and-option">
+        <li id="searchbar"> <form name="myform" action="/entry/bhutia_english/" method="get">
+          <div class="input-field">
+            <span class="icon"><i class="fa fa-search"></i>
+            </span>
+            <input type="search" id="search" placeholder="Search..." name="q" />
+          </div>
+        </li>
+        <li id="options">
+          <a href="#">Options</a>
+          <ul class="subnav">
+            <!--<li><input id="engToBhut" type="button" name="operation" onclick="Translation(eToB)" value="English to Bhutia"/></li>
+            <li><input type="button" name="operation" onclick="document.pressed=this.value" value="Bhutia to English"/></li>
+            <li><button id="button" type="button">Change color</button></li> -->
+<li><button id="bhutToEng" type="button" value="bhutToEng">Bhutia to English</li>
+            <li><button id="engToBhut" type="button" value="engToBhut">English to Bhutia</li>
+                <li><button id="tibToBhut" type="button" value="tibToBhut">Tibetan to Bhutia</li>
                 </form>
-
-            </div>
-
-            </div>
-
-
- 	</body>
-
-
-
-    
+              </ul>
+            </li>
+          </section>
+        </div>
+      </div>
+    </body>
+    <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
