--- a/mysite/entry/static/css/index.css
+++ b/mysite/entry/static/css/index.css
@@ -1,7 +1,75 @@
+
+
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
+
+/*
+=============
+end css reset
+============
+*/
+
 body,h1, h1 a {font:300 45px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 text-decoration: none;
-
 }
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+	outline: none;
+}
+
+
 body, html {height: 100%}
 .bg {
 	background-color: #ee6e73;
@@ -10,11 +78,13 @@ body, html {height: 100%}
 		background-size: cover;
 }
 
+input#search {
+	width: 80%;
+}
 
 /*begin dumb code */
 .navigation input#search {
 	min-height: 50px;
-	width: 500px;
 	height: 75%;
 	background: #fcfcfc;
 	border: none;
@@ -30,41 +100,4 @@ body, html {height: 100%}
 	border-color:#f9f9f9;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 	transition: box-shadow 0.3s ease-in-out;
-}
-
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-	outline: none;
-}
-
-.navigation input#search:hover {
-	-webkit-box-shadow: 0px 0px 14px 1px rgba(125,125,125,0.44);
-	-moz-box-shadow: 0px 0px 14px 1px rgba(125,125,125,0.44);
-	box-shadow: 0px 0px 14px 1px rgba(125,125,125,0.44);
-}
-
-.navigation input#search::-webkit-input-placeholder {
-	color: #65737e;
-}
-
-.navigation  input#search:-moz-placeholder { /* Firefox 18- */
-	color: #65737e;
-}
-
-.navigation  input#search::-moz-placeholder {  /* Firefox 19+ */
-	color: #65737e;
-}
-
-.navigation  input#search:-ms-input-placeholder {
-	color: #65737e;
-}
-
-input {
-	font-size: 50%;
-}
-
-li button, #options {
-	font-size: 50%;
 }
