--- a/mysite/entry/static/css/index.css
+++ b/mysite/entry/static/css/index.css
@@ -101,3 +101,17 @@ input#search {
 	box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 	transition: box-shadow 0.3s ease-in-out;
 }
+
+
+@media screen and (max-width: 900px) {
+
+	body {
+		font-size:calc(16px + 10 * ((100vw - 320px) / 680));
+	}
+  h1 a {
+    font-size: calc(16px + 10 * ((100vw - 320px) / 680));
+  }
+	#Searchbar input#search  {
+		flex-grow: 1;
+	}
+}
