--- a/mysite/entry/static/css/index.css
+++ b/mysite/entry/static/css/index.css
@@ -1,6 +1,3 @@
-
-
-
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -70,7 +67,7 @@ button:focus {
 }
 
 
-body, html {height: 100%}
+/*body, html {height: 100%}*/
 .bg {
 	background-color: #ee6e73;
 		min-height: 100%;
